deployments/pathweb/workloads/media-services/music-assistant/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: music-assistant
  namespace: media-services
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: music-assistant
  serviceName: music-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: music-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"music-assistant-iot-network"}]'
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-group
                operator: In
                values: [baldric, voyager]
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: music-assistant
        image: ghcr.io/music-assistant/server:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8095
          name: http
          protocol: TCP
        - containerPort: 8097
          name: streaming
          protocol: TCP
        volumeMounts:
        - name: mass-data
          mountPath: /data
          subPath: music-assistant
        - name: media
          mountPath: /mnt/media/Music
          subPath: Music
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            memory: 2Gi
        livenessProbe:
          tcpSocket:
            port: 8095
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8095
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: mass-data
        persistentVolumeClaim:
          claimName: home-assistant-data
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-nfs
