deployments/pathweb/workloads/media-services/music-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: media-services
  labels:
    app.kubernetes.io/name: music-assistant
    external-dns: local-pdns
    lb-location: rfhome
  annotations:
    external-dns.kubernetes.io/hostname: mass.services.home.yrf.me
spec:
  selector:
    app.kubernetes.io/name: music-assistant
  type: LoadBalancer
  ports:
  - port: 8095
    targetPort: 8095
    name: http
    protocol: TCP
    appProtocol: http
  - port: 8097
    targetPort: 8097
    name: streaming
    protocol: TCP
    appProtocol: http
  - port: 8927
    targetPort: 8927
    name: sendspin
    protocol: TCP
    appProtocol: kubernetes.io/ws
