deployments/pathweb/workloads/media-services/music-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  namespace: media-services
  labels:
    app.kubernetes.io/name: music-assistant
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-cilium
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - music-assistant.services.home.yrf.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: music-assistant
      port: 8095
